fix: nbt can't deserialize record class without no args init